--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,12 @@
 .read-the-docs {
   color: #888;
 }
+
+.bg{
+  background-image: url(./images/TempStreamBg.jpg);
+  width: 600px;
+  height: 600px;
+  background-size: cover;
+  z-index: -100;
+  
+}
