--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,6 @@
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -42,10 +35,12 @@
 }
 
 .bg{
-  background-image: url(./images/TempStreamBg.jpg);
-  width: 600px;
-  height: 600px;
-  background-size: cover;
-  z-index: -100;
-  
+  text-align: center;
+  background-image: url(${./images/TempStreamBg.jpg});
+ 
+  height: 100%;
+
+  background-size: "cover";
+  background-position: center;
+  background-repeat: no-repeat;
 }
