--- a/src/App.css
+++ b/src/App.css
@@ -34,13 +34,14 @@
   color: #888;
 }
 
-.bg{
-  text-align: center;
-  background-image: url(${./images/TempStreamBg.jpg});
- 
+.homepage-bg{
+  
+  background-image: url(${/images/TempStreamBg.jpg});
+  /* text-align: center;
   height: 100%;
+  width: 100%;
 
-  background-size: "cover";
+  background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 }
