--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,8 @@
 
 .homepage-bg{
   background-image: url('./images/TempStreamBg.jpg');
-  text-align: 'center';
+  box-sizing: border-box;
+  text-align: center;
   height: 100dvh;
   width: 100dvw;
   box-sizing: border-box;
@@ -44,6 +45,6 @@
   object-fit: cover;
   background-repeat: no-repeat; 
   background-position: center;
-  overflow-x:scroll;
-  overflow-y:scroll; 
+  /* overflow-x:scroll;
+  overflow-y:scroll;  */
 }
